# cpp-systems-architecture

./: .gitignore  CMakeLists.txt  README.md  procpp.sh
.github/workflows/: cpp-ci.yml
docs/progress/: day_01_variables.md  day_02_strings.md  day_03_prints.md  day_04_variable_names.md  day_05_maths_operations.md  day_06_data_types.md  day_07_convert_types_casting.md  day_08_if_else_conditionals.md  day_09_logical_operators.md  day_10_randomisation.md  day_11_error_handling.md  day_12_functions.md  day_13_for_loops.md  day_14_code_block_indentation.md  day_15_while_loops.md  day_16_flowchart_programming.md  day_17_maps_vectors.md  day_18_positional_keyword_arguments.md  day_19_pointer_references.md  day_20_returning_function.md  day_21_return_vs_print.md  day_22_docs_strings_comments.md  day_23_scope_local_global_variables.md  day_24_debugging_technique.md  day_25_dev_env_setup_local.md  day_26_ide_tips_tricks.md  day_27_oop_basics.md  day_28_classes.md  day_29_external_libraries.md
src/day_01_memory/: main.cpp
src/day_02_strings/: main.cpp  string_utils.hpp
src/day_03_prints/: main.cpp
src/day_04_variable_names/: main.cpp
src/day_05_maths_operations/: main.cpp
src/day_06_data_types/: main.cpp
src/day_07_convert_types_casting/: main.cpp
src/day_08_if_else_conditionals/: main.cpp
src/day_09_logical_operators/: main.cpp
tests/: test_day_01.cpp  test_day_02.cpp  test_day_03.cpp  test_day_04.cpp  test_day_05.cpp  test_day_06.cpp  test_day_07.cpp  test_day_08.cpp  test_day_09.cpp  test_day_10.cpp  test_day_11.cpp  test_day_12.cpp  test_day_13.cpp  test_day_14.cpp  test_day_15.cpp  test_day_16.cpp  test_day_17.cpp  test_day_18.cpp  test_day_19.cpp  test_day_20.cpp  test_day_21.cpp  test_day_22.cpp  test_day_23.cpp  test_day_24.cpp  test_day_25.cpp  test_day_26.cpp  test_day_27.cpp  test_day_28.cpp  test_day_29.cpp
(+20 files in other folders)
